Otimização do sharp, separação do módulo de jogadores favoritos e japoneses. Criação de roll in line para o módulo _japanese. Imagens duplas em desenvolvimento

--- a/sharp.config.json
+++ b/sharp.config.json
@@ -1,5 +1,18 @@
 {
-    "png" : {
-        "quality" : 75
+    "jpeg": {
+        "quality": 80,
+        "progressive": true
+    },
+    "png": {
+        "quality": 75,
+        "compressionLevel": 9
+    },
+    "webp": {
+        "quality": 75,
+        "lossless": false
+    },
+    "avif": {
+        "quality": 60,
+        "lossless": false
     }
 }
